[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://GFX/PNG/Hitman 1/hitman1_stand.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Characters/PlayerCollisionShape.tres" type="Shape2D" id=4]
[ext_resource path="res://Scenes/Characters/CharacterOccluder.tres" type="OccluderPolygon2D" id=5]
[ext_resource path="res://theme.tres" type="Theme" id=6]

[node name="Player" instance=ExtResource( 1 )]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
visible = true
position = Vector2( -0.0872824, 0 )
shape = ExtResource( 4 )

[node name="LightOccluder2D" parent="." index="2"]
occluder = ExtResource( 5 )

[node name="Light2D" type="Light2D" parent="." index="3"]
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="." index="4"]
wait_time = 5.0
one_shot = true

[node name="Label" type="Label" parent="." index="5"]
margin_left = 19.5018
margin_top = -37.5766
margin_right = 59.5018
margin_bottom = -19.5766
theme = ExtResource( 6 )
text = "0.00"

[node name="VisionModeTimer" type="Timer" parent="." index="6"]
[connection signal="timeout" from="Timer" to="." method="show_player"]
[connection signal="timeout" from="VisionModeTimer" to="." method="_on_VisionModeTimer_timeout"]
